# object-detection-dashboard

./: .gitignore  README.md  pyproject.toml  pytest.ini
app/: main.py
app/pages/: 01_image_object_detection.py
app/pages/common/: constants.py
app/pages/image_detection/: README.md  constants.py  main.py  utils.py
app/pages/image_detection/test/: test_main.py
scripts/: localdev.sh  run-dev.sh
