[tool.poetry]
name = "python-streamlit-yolo-example"
version = "0.1.0"
description = ""
authors = ["Kyle Bochanski <kbochansk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.16.0"
opencv-python = "^4.7.0"
streamlit-embedcode = "^0.1.2"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
